--- a/packages/services/cats/package.json
+++ b/packages/services/cats/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start:dev": "ts-node ./src",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "build:turbo": "tooling turbo-build",
+    "build:docker": "tooling turbo-docker"
   },
   "dependencies": {
     "@internal/cats-api": "0.0.0",
