--- a/turbo.json
+++ b/turbo.json
@@ -13,5 +13,6 @@
     "build:docker": {
       "dependsOn": ["build:turbo"]
     }
-  }
+  },
+  "globalDependencies": ["provision/template.Dockerfile", "tsconfig.json"]
 }
