--- a/packages/shared/grpc-server/package.json
+++ b/packages/shared/grpc-server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "nice-grpc": "^1.1.1",
+    "nice-grpc-server-health": "^1.1.0",
     "nice-grpc-server-reflection": "^1.0.11"
   }
 }
