--- a/packages/shared/schema-validator/package.json
+++ b/packages/shared/schema-validator/package.json
@@ -7,6 +7,7 @@
     "build": "rm -rf dist && tsc"
   },
   "dependencies": {
+    "aggregate-error": "^3.0.0",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1"
   }
